# se-toolkit-lab-7

./: .env.docker.example  README.md  deploy-bot.sh  docker-compose.yml
.qwen/: settings.json  settings.json.orig
bot/: Dockerfile  PLAN.md  bot.py  config.py  keyboards.py  pyproject.toml
bot/handlers/: __init__.py  commands.py  intent.py
bot/handlers/commands/: __init__.py
bot/services/: __init__.py  api_client.py  llm_client.py
lab/tasks/: setup.md
lab/tasks/required/: task-1.md
wiki/: backend-pyproject-toml.md  computer-networks.md  pgadmin.md  pyproject-toml.md
